static/styles.css
:root {
    --bright-blue: hsl(220, 98%, 61%);
    --bg-gradient: linear-gradient( to right, hsl(280, 70%, 43%), hsl(280, 87%, 65%) );
    --btn-grad: linear-gradient(to right, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
    /* LIGHT THEME */
    --Very-Light-Gray: hsl(0, 0%, 98%);
    --Very-Light-Grayish-Blue: hsl(236, 33%, 92%);
    --Light-Grayish-Blue: hsl(233, 11%, 84%);
    --Dark-Grayish-Blue: hsl(236, 9%, 61%);
    --Very-Dark-Grayish-Blue: hsl(235, 19%, 35%);

    /* DARK THEME */
    --Very-Dark-Blue: hsl(235, 21%, 11%);
    --Very-Dark-Desaturated-Blue: hsl(235, 24%, 19%);
    --Light-Grayish-Blue: hsl(234, 39%, 85%);
    --Light-Grayish-Blue-hover: hsl(236, 33%, 92%);
    --Dark-Grayish-Blue: hsl(234, 11%, 52%);
    --Very-Dark-Grayish-Blue: hsl(233, 14%, 35%);
    --Very-Dark-Grayish-Blue: hsl(237, 14%, 26%);

    --fs-body: 18px;
    --ff-josefin-sans: 'Josefin Sans', sans-serif;
}


/*##################
    MOBILE FIRST 
###################*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
}


body, main {
    width: 100vw;
    min-height: 100vh;
    font-size: var(--fs-body);
    font-family: var(--ff-josefin-sans);
    overflow: hidden;
}

header {
    width: 100%;
    height: 10vh;
    padding: 0.5rem 0 0.5rem 0.5rem;
    display: flex;
    background-color: var(--Very-Dark-Desaturated-Blue);
    align-items: center;
}

.logo {
    width: 30%;
    display: flex;
    align-items: center;
}

.logo .logo-text {
    color: hsl(280, 70%, 43%);
    font-weight: 700;
}

nav {
    display: none;   
}

.menu {
    width: 1.5rem;
    margin: 0 0.5rem 0 auto;
    cursor: pointer;
}

.menu img {
    width: 100%;
}

.mobile-menu {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 50vw;
    background-color: var(--Very-Dark-Desaturated-Blue);
    padding: 1rem;
    transition: all 0.3s linear;
    transform: translateX(100%);
}

.show-btn {
    transform: translateX(0);
    z-index: 1000;
}

.close {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.close-btn  {
    width: 1.5rem;
    cursor: pointer;
}

.close-btn img {
    width: 100%;
}

.switch-theme {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.switch-theme .btn-container {
    width: 1.5rem;
}

.switch-theme img {
    width: 100%;
}

.btn-container .dark-icon {
    display: none;
}

.mobile-nav-list {
    width: 100%;
    list-style-type: none;
    margin: 3rem 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.mobile-nav-list li {
    margin: 1rem 0;
}


nav a, .mobile-nav-list li a {
    color: white;
    cursor: pointer;
    transition: all 0.2s linear;
}


nav a:hover, .mobile-nav-list li a:hover {
    color: hsl(280, 70%, 43%);
    letter-spacing: 0.1rem;
}


/* Login & SignUp */
.section-bg {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 10vh;
    bottom: 0;
    right: 0;
    left: 0;
    background-color: #000;
    gap: 2px;
    flex-wrap: wrap;
    overflow: hidden;
}

.section-bg::before {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    background: linear-gradient(#000, hsl(280, 74%, 40%), #000);
    animation: animate 5s linear infinite;
}

@keyframes animate {
    0% {
        transform: translateY(-100%);
    }
    100% {
        transform: translateY(100%);
    }
}

.section-bg > span {
    position: relative;
    width: calc(10vw - 2px);
    height: calc(10vw - 2px);
    background-color: #181818;
    transition: 1.5s;
}

.section-bg > span:hover {
    background: hsl(280, 74%, 40%);
    transition: 0s;
}

.section-bg .signin {
    position: absolute;
    max-width: 400px;
    width: 80%;
    background-color: #222;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px;
    border-radius: 4px;
    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
    z-index: 100;
}

.section-bg .signin .content {
    position: relative;
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 30px;
    justify-content: center;
    align-items: center;

}

.section-bg.section-register .signin .content {
    gap: 5px;
}

.section-bg.section-register .signin .content form {
    gap: 15px;
}

.section-bg .signin .content h2 {
    text-transform: uppercase;
    color: hsl(280, 70%, 43%);
}


.section-bg .signin .content form {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 25px;
}

.section-bg .signin .content form .inputBx {
    position: relative;
    width: 100%;
}

.section-bg .signin .content form .inputBx input {
    position: relative;
    width: 100%;
    background: #333;
    border: none;
    outline: none;
    padding: 15px 10px 7.5px;
    border-radius: 4px;
    color: #fff;
    font-size: 1rem;
}

.section-bg .signin .content form .inputBx span {
    position: absolute;
    left: 0;
    padding: 15px 10px;
    color: #aaa;
    pointer-events: none;
    transition: all 0.5s linear;

}

.error {
    margin: 0.5rem;
    color: rgb(192, 69, 69);
    font-weight: 100;
}


.section-bg .signin .content form .inputBx input:focus ~ span{
    transform: translateY(-30px);
    font-size: 0.8rem;
}

.active {
    transform: translateY(-30px);
    font-size: 0.8rem;
}

.section-bg .signin .content form .links {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.section-bg .signin .content form .links span {
    color: #aaa;
    font-size: 0.8rem;
}

.section-bg .signin .content form .links a {
    color: hsl(280, 70%, 43%);
    font-weight: 700;
}

.section-bg .signin .content form button {
    padding: 10px;
    background: hsl(280, 70%, 43%);
    border: none;
    outline: none;
    color: #111;
    font-size: 1rem;
    letter-spacing: 0.05em;
    border-radius: 5px;
    cursor: pointer;
}

.section-bg .signin .content form button:hover {
    box-shadow: 0 0 10px 1px hsl(280, 70%, 43%);
}


/*##################
    DESKTOP STYLES
###################*/

@media (min-width: 768px)
{
    nav {
        display: flex;
        align-items: center;
        margin: 0 2rem 0 auto;
    }

    nav .theme-switcher {
        margin: 1rem;
    }

    nav .mobile-nav-list {
        flex-direction: row;
    }

    nav .mobile-nav-list li{
        margin: 1rem;
        padding: 1rem;
    }

    .logo-text {
        font-size: 2rem;
    }

    .menu {
        display: none;
    }

    .section-bg > span {
        position: relative;
        display: block;
        width: calc(6.25vw - 2px);
        height: calc(6.25vw - 2px);
    }
    .section-bg .signin .content form {
        gap: 40px;
    }
}

/*##################
    USER HOME PAGE
###################*/
section.home-section {
    position: absolute;
    top: 10vh;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: var(--Very-Dark-Blue);
}

.home-section .intro {
    position: relative;
    width: 100vw;
    height: 25vh;
    background: url(../static/images/bg-mobile-dark.jpg);
    background-size: 100% 100%;
    background-repeat: no-repeat;
    display: flex;
    align-items: center;
    justify-content: center;
    
}

.intro-username {
    color: #FFF;
    font-size: 700;
    font-size: 1.5rem;
    position: absolute;
    top: 1rem;
    left: 1rem;
}

.intro form {
    position: absolute;
    bottom: 2rem;
    width: 80%;
    max-width: 500px;
    display: flex;
    align-items: center;
}

.intro form span {
    position: absolute;
    left: 1rem;
    background: inherit;
    width: 1rem;
    height: 1rem;
    border: 1px solid var(--Very-Dark-Grayish-Blue);
    border-radius: 50%;
    z-index: 1;

    
}

.intro form input {
    width: 100%;
    height: 2rem;
    background-color: var(--Very-Dark-Desaturated-Blue);
    border: none;
    outline: none;
    border-radius: 5px;
    padding: 0.5rem 0 0.5rem 2.5rem;
    color: var(--Dark-Grayish-Blue);
    position: relative;
    top: 0.2rem;

}

/*##################
    TASKS
###################*/

.todo-list {
    width: 80%;
    height: auto;
    max-width: 500px;
    background-color: var(--Very-Dark-Desaturated-Blue);
    position: absolute;
    top: 11rem;
    border-radius: 5px;
    list-style-type: none;
}

.todo-list li {
    width: 100%;
    height: 2rem;
    background-color: var(--Very-Dark-Desaturated-Blue);
    border-bottom: 0.1rem solid var(--Very-Dark-Grayish-Blue);
    outline: none;
    padding: 0.5rem 1rem 0.5rem 2.5rem;
    color: var(--Very-Light-Grayish-Blue);
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;
    cursor: pointer;
    font-size: 1rem;
}

.todo-list li:nth-child(1) {
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
}

.todo-list li:last-child {
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
}

.mark-complete {
    position: absolute;
    left: 1rem;
    background: inherit;
    width: 1rem;
    height: 1rem;
    border: 1px solid var(--Very-Dark-Grayish-Blue);
    border-radius: 50%;
    z-index: 1;
    display: grid;
    place-items: center;

}

.item.dragging {
    opacity: 0;
}


.task-complete {
    background: var(--btn-grad);
}

/* Task Complete behavior */
.item .mark-complete img {
    display: none;
}

.item .task-complete img {
    display: block;
}

.complete {
    text-decoration: line-through;
    color: var(--Dark-Grayish-Blue)!important;
    font-style: italic;
}

.delete-task {
    display: grid;
    place-items: center;
}

@media (min-width: 768px)
{
    .home-section .intro {
        height: 40vh;
        background: url(../static/images/bg-desktop-dark.jpg);
    }

    .intro-username {
        font-size: 2rem;
    }

    .intro form {
        bottom: 4rem;
    }

    .intro form input {
        height: 3rem;
        font-size: 1rem;
    }

    .todo-list {
        top: 17rem;
    }

    .todo-list li {
    height: 3rem;
    padding: 0.5rem 1rem 0.5rem 2.5rem;
    font-size: 1.1rem;
    }
}



/*##################
    Filter
###################*/
.item:last-child {
    padding: 1rem;
    font-size: 14px;
    position: relative;
}

.item:last-child a {
    color: var(--Dark-Grayish-Blue);
}

.item:last-child a:hover {
    color: var(--Light-Grayish-Blue-hover);
}



.item:last-child .num-items {
    margin: 0 2rem 0 0;
    color: var(--Dark-Grayish-Blue);
}

.item:last-child .controls {
    position: absolute;
    top: 3rem;
    left: 0;
    right: 0;
    width: 100%;
    background-color: inherit;
    height: inherit;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: inherit;
}

.item:last-child .controls a {
    margin: 0.2rem;
}

.item:last-child .controls a.active {
    color: var(--bright-blue);
    font-size: 16px ;
}

@media (min-width: 768px)
{
    .item:last-child .controls {
        position: relative;
        width: auto;
        top: 0;
    }
}

